@@ -1,3 +1,7 @@
+2010-12-11  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Flymake now support clang.
+
 2010-12-08  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Flymake both support vc6 and vc2010.
